feat: add storage route (MAPCO-2932)
